// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render empty message when no expenses in array 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="visible-narrow"
    >
      Expenses
    </div>
    <div
      className="visible-large"
    >
      Expense
    </div>
    <div
      className="visible-large"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--nodata"
    >
      <span>
        No Expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`should render expense list with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="visible-narrow"
    >
      Expenses
    </div>
    <div
      className="visible-large"
    >
      Expense
    </div>
    <div
      className="visible-large"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={1995}
      createdAt={0}
      description="Gum"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={20000}
      createdAt={-345600000}
      description="Credit Card"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={50000}
      createdAt={345600000}
      description="Rental"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
